# Ocarina-Nexus

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: explore.py  run_scrape.py  run_transform.py
src/ocarina_nexus/: config.py
src/ocarina_nexus/ingestion/: load_duckdb.py  scraper_characters.py
src/ocarina_nexus/models/: entities.py
src/ocarina_nexus/utils/: infobox_parser.py  logging.py  wiki_api.py
