[project]
name = "ocarina-nexus"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pydantic>0.7.0",
    "loguru>0.7.0",
    "python-dotenv>=1.0.0",
]